--- a/classes/cluster/virtual-mcp11-k8s-calico/kubernetes/compute.yml
+++ b/classes/cluster/virtual-mcp11-k8s-calico/kubernetes/compute.yml
@@ -6,10 +6,10 @@ classes:
 - cluster.virtual-mcp11-k8s-calico.infra
 parameters:
   _param:
-    kubernetes_calicoctl_image: docker-prod-virtual.sandbox.mirantis.net/mirantis/projectcalico/calico/ctl:latest
-    kubernetes_calico_image: docker-prod-virtual.sandbox.mirantis.net/mirantis/projectcalico/calico/node:latest
-    kubernetes_calico_cni_image: docker-prod-virtual.sandbox.mirantis.net/mirantis/projectcalico/calico/cni:latest
-    kubernetes_hyperkube_image: docker-prod-virtual.sandbox.mirantis.net/mirantis/kubernetes/hyperkube-amd64:v1.5.4-5
+    kubernetes_calicoctl_image: calico/ctl:latest
+    kubernetes_calico_image: calico/node:latest
+    kubernetes_calico_cni_image: calico/cni:latest
+    kubernetes_hyperkube_image: gcr.io/google_containers/hyperkube-amd64:v1.5.4-5
   docker:
     host:
       pkgs:
